--- a/OpenMeteoWeatherApp/Secrets.xcconfig.template
+++ b/OpenMeteoWeatherApp/Secrets.xcconfig.template
@@ -5,4 +5,4 @@
 //  Created by Vishnu Priyan Sellam Shanmugavel on 6/15/25.
 //
 
-GEMINI_API_KEY = "AIzaSyC2I7Kpg21u_EUQf91ztb3vFNQXHsfZ6qY"
+GEMINI_API_KEY = "YOUR GEMINI API KEY"
