--- a/OpenMeteoWeatherApp/Info.plist
+++ b/OpenMeteoWeatherApp/Info.plist
@@ -7,7 +7,7 @@
 		<string>com.vishnu.OpenMeteoWeatherApp.fetchWeatherSuggestion</string>
 	</array>
 	<key>GEMINI_API_KEY</key>
-	<string>AIzaSyC2I7Kpg21u_EUQf91ztb3vFNQXHsfZ6qY</string>
+	<string>$(GEMINI_API_KEY)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
